--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body {
     background-color: grey;
 }
+
+p {
+    text-align: center;
+    background-color: brown;
+    font-size: 40px;
+}
+.kirtinka {
+    background-color: grey;
+}
+
+h1 {
+    font-size: 70px;
+    text-align: center;
+    background-color: brown;
+}
