--- a/style.css
+++ b/style.css
@@ -16,3 +16,27 @@ h1 {
     text-align: center;
     background-color: brown;
 }
+
+img {
+    height: auto;
+    width: 100%;
+}
+
+.nav a {
+    color: black;
+    text-decoration: none;
+    padding: 6px;
+    border: 1px solid black;
+    
+}
+
+.nav {
+    display: flex;
+    justify-content:space-around;
+
+}
+
+a:hover {
+    background-color: black;
+    color: white;
+}
